--- a/public/style.css
+++ b/public/style.css
@@ -7,3 +7,9 @@ body {
 
 	font-family: "JetBrains Mono", sans-serif;
 }
+
+code {
+	padding: 4px;
+	background-color: rgb(240, 240, 240);
+	border-radius: 5px;
+}
