--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -5,6 +5,7 @@
 {% block head %}{% endblock %}
 
 {% block content %}
-	<img src="/logo_smp.png" />
+	{% include "_logos.jinja" %}
+	
 	<h1>Hello, world!</h1>
 {% endblock %}
