--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -5,7 +5,7 @@
 {% block head %}{% endblock %}
 
 {% block content %}
-	{% include "_logos.jinja" %}
-	
+	<img src="/images/discord-smp-link-logo.png" style="width: 200px;" />
+
 	<h1>Hello, world!</h1>
 {% endblock %}
