--- a/templates/auth.jinja
+++ b/templates/auth.jinja
@@ -8,9 +8,9 @@
 
 {% block content %}
 	<div style="display: flex; align-items: center; justify-content: space-around;">
-		<img src="/images/discord-smp-link-logo.png" style="width: 200px;" />
+		<img src="/static/images/discord-smp-link-logo.png" style="width: 200px;" />
 		<span style="font-size: 40px; margin: 0 5%;">+</span>
-		<img src="/images/smp-logo.png" style="width: 200px;" />
+		<img src="/static/images/smp-logo.png" style="width: 200px;" />
 	</div>
 
 	{% if is_success %}
