--- a/templates/_base.jinja
+++ b/templates/_base.jinja
@@ -2,7 +2,17 @@
 <html lang="en">
 	<head>
 		<title>{% block title %}{% endblock %} - Discord SMP Link</title>
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="/static/style.css" />
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png?v=1">
+		<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png?v=1">
+		<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png?v=1">
+		<link rel="manifest" href="/static/site.webmanifest?v=1">
+		<link rel="mask-icon" href="/static/safari-pinned-tab.svg?v=1" color="#5bbad5">
+		<link rel="shortcut icon" href="/static/favicon.ico?v=1">
+		<meta name="msapplication-TileColor" content="#2b5797">
+		<meta name="theme-color" content="#ffffff">
+
 		{% block head %}{% endblock %}
 	</head>
 	<body>
